; ModuleID = '/home/carl/AnghaBench/redis/src/extr_bitops.c_getUnsignedBitfield.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_bitops.c_getUnsignedBitfield.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @getUnsignedBitfield(i8* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %12, align 8
  store i64 0, i64* %11, align 8
  br label %13

13:                                               ; preds = %38, %3
  %14 = load i64, i64* %11, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %41

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  %19 = ashr i64 %18, 3
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %5, align 8
  %21 = and i64 %20, 7
  %22 = sub nsw i64 7, %21
  store i64 %22, i64* %8, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = load i64, i64* %7, align 8
  %25 = getelementptr inbounds i8, i8* %23, i64 %24
  %26 = load i8, i8* %25, align 1
  %27 = zext i8 %26 to i64
  store i64 %27, i64* %9, align 8
  %28 = load i64, i64* %9, align 8
  %29 = load i64, i64* %8, align 8
  %30 = ashr i64 %28, %29
  %31 = and i64 %30, 1
  store i64 %31, i64* %10, align 8
  %32 = load i64, i64* %12, align 8
  %33 = shl i64 %32, 1
  %34 = load i64, i64* %10, align 8
  %35 = or i64 %33, %34
  store i64 %35, i64* %12, align 8
  %36 = load i64, i64* %5, align 8
  %37 = add nsw i64 %36, 1
  store i64 %37, i64* %5, align 8
  br label %38

38:                                               ; preds = %17
  %39 = load i64, i64* %11, align 8
  %40 = add nsw i64 %39, 1
  store i64 %40, i64* %11, align 8
  br label %13

41:                                               ; preds = %13
  %42 = load i64, i64* %12, align 8
  ret i64 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
